iac/local/spark/spark-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-master
  labels:
    app: spark
    role: master
spec:
  selector:
    app: spark
    role: master
  ports:
    - name: spark
      protocol: TCP
      port: 7077
      targetPort: 7077
    - name: webui
      protocol: TCP
      port: 8080
      targetPort: 8080
