iac/local/spark/spark-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-worker
  labels:
    app: spark
    role: worker
spec:
  selector:
    app: spark
    role: worker
  type: ClusterIP
  ports:
    - name: webui
      protocol: TCP
      port: 8081
      targetPort: 8081
